my project animation transition fixed on mobile

--- a/src/styles/my-projects.scss
+++ b/src/styles/my-projects.scss
@@ -67,12 +67,13 @@
 }
 
 .link-container-visible {
+  top: -10rem;
   display: flex;
   margin: 1rem 0;
   text-align: center;
   transition: 600ms;
   opacity: 1;
-  transform: rotateX(0deg);
+  transform: translateX(0rem);
 }
 
 .link-container {
@@ -82,7 +83,7 @@
   text-align: center;
   transition: 600ms;
   opacity: 1;
-  transform: rotateX(90deg);
+  transform: translateX(90rem);
 }
 
 .link {
@@ -164,24 +165,33 @@
     width: 4rem;
     height: 4rem;
     font-size: 0.8rem;
+    box-shadow: 0 0 50px 10px $base-color;
   }
   .projects-container-open {
     width: 65%;
     height: 65%;
     font-size: 0.8rem;
+    transition: 1s;
   }
   .link,
   .link-2,
   .link-visible,
   .link-visible-2 {
-    width: 3rem;
-    height: 1.5rem;
+    width: 4rem;
+    height: 2rem;
   }
   .project-close-icon {
     height: 1.2rem;
     width: 1.2rem;
     z-index: 5;
     left: 5%;
+  }
+  .projects-item {
+    opacity: 0;
+  }
+  .projects-item-visible {
+    transition: 1s;
+    opacity: 1;
   }
 }
 
